[package]
name = "steam-auth"
version = "0.1.1"
edition = "2021"
description = "Generate Steam authentication tickets for web API usage"
license = "GPL-3.0"
repository = "https://github.com/infernap12/steam-auth"
keywords = ["steam", "authentication", "gaming", "api"]
categories = ["authentication", "api-bindings"]

[dependencies]
steamworks = "0.12.2"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
